# Blue-Ocean-Hub-_Collaborative-Model

./: README.md
V4/: README.md  V4整合说明与验收清单.md  V4模块纳入与匹配检查报告.md  build_v4_snapshot.ps1  run_all_tests_v4.m  run_v4_integration.m
V4/integration/common/: v4_fill_port.m
V4/manifests/: v4_module_compatibility.csv  v4_modules_curated_manifest.csv  v4_modules_curated_summary.csv  v4_package_manifest.csv  v4_snapshot_manifest.csv  v4_snapshot_scope.csv  v4_snapshot_summary.csv
V4/modules/: README.md
V4/modules/4.3_source/: README.md
V4/modules/4.4_bus/: README.md
V4/modules/4.5_storage_hydrogen/: README.md
V4/modules/4.6_compute/: README.md
V4/modules/4.7_outputs/delivery_model/: README.md  pyproject.toml  目标函数与约束条件.md
V4/modules/4.7_outputs/delivery_model/configs/: parameters.yaml
V4/modules/4.7_outputs/delivery_model/examples/: run_example.py
V4/modules/4.7_outputs/delivery_model/src/bluehub_submodules/: __init__.py  balance.py  compute_load.py  constraints.py  hydrogen_output.py  marine_load.py  objectives.py  parameters.py  power_export.py  scenario.py
V4/modules/4.7_outputs/delivery_model/tests/: test_compute_load.py  test_constraints.py  test_hydrogen_output.py  test_integrated_balance.py  test_marine_load.py  test_parameters.py  test_power_export.py
V4/outputs/: test_compute_power_following.csv  test_compute_sla.csv  v4_compute_audit.json  v4_compute_request.csv  v4_compute_response.csv  v4_hourly_summary.csv  v4_integration_result.mat  v4_objective_summary.csv  v4_output_request.csv  v4_output_response.csv  v4_test_report.mat
(+91 files in other folders)
