[project]
name = "bluehub-submodules"
version = "0.1.0"
description = "Minimal auditable submodels for Blue Hub power export, compute, hydrogen, marine load, and integrated balance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluehub_submodules"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
